2011-02-11 Dominique Dumont  <domi.dumont@free.fr> 1.233
    
    * Application changes:
        * dpkg control source model: Added DM-Upload-Allowed and all Vcs-* tags defined 
        in Debian reference guide (Peter Pentchev)
          (Fix RT 65575)
        
    * Framework changes:
        * Backend Ini file: Fixed comment handling
        * All modules: Improved synopsis. You can now save them in a file and 
          have a working program
        * Remove crappy handling of comments in load_data methods. 
        * DumpAsData: Write annotations as pod in method dump_annotations_as_pod
        * Anything: load_pod_annoation load annotations from a pod document 
        * Instance write back: now correctly call all write_back when several
          nodes in model needs to be called back

2011-01-30 Dominique Dumont  <domi.dumont@free.fr> 1.232

    * Added missing Text::Autoformat dependency

2011-01-30 Dominique Dumont  <domi.dumont@free.fr> 1.231

    * Application changes:
        * Debian::Dependency: reworked to reduce calls to madison. Report available
          versions when unnessary version issue is found.). Source is optional.
        * dpkg control model: added forgotten Enhances and Pre-Depends. Added warnings for
          too long lines in Description (plus fixes based on Text::Autoformat). Added 
          Synopsis element to better tune warnings and fixes
    * Framework changes:
        * FuseUI: Fix undef warning. Ensure that files finish with "\n". 
          Fix bug where value 0 was shown as an empty file.
        * Added PlainFile backend (each config parameter is stored in its own file. useful for
        some dpkg data)

2011-01-21 Dominique Dumont  <domi.dumont@free.fr> 1.230

    * Application changes:
        * Debian::Dependency: don't check debhelper
        * Debian::Copyright: removed license keyword warnings. (fix Debian #610242), lots
          of other bug fixes (including debian bug #609889 #610231)

    * Framework changes: